Implement MVP for Maze Runner